working on buttons

--- a/rps.html
+++ b/rps.html
@@ -7,8 +7,13 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    
+    <button onclick="playRound(playerSelectionRock, computerSelection)">Rock</button>
 
+    <button onclick="playRound(playerSelectionPaper, computerSelection)">Paper</button>
+
+    <button onclick="playRound(playerSelectionScissors, computerSelection)">Scissors</button>
+
+    <p id="result">The results should display here.</p>
     <script src="rps.js"></script>
 </body>
 </html>
