update with 'UPDATE'

--- a/rps.html
+++ b/rps.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="rps.css">
 </head>
 <body>
-    <h1 class="header">Let's play Rock, Paper, Scissors. The First to Five Wins.</h1>
+    <h1 class="header">Let's play Rock, Paper, Scissors (UPDATED). The First to Five Wins.</h1>
 
     <h2 id="player-score"></h2>
     <h2 id="computer-score"></h2>
